Trasee montane CRUD

--- a/MobileApp/MountainTrailsApp/AppShell.xaml
+++ b/MobileApp/MountainTrailsApp/AppShell.xaml
@@ -10,7 +10,7 @@
     <TabBar>
         <ShellContent
             Title="Trasee"
-            ContentTemplate="{DataTemplate local:MainPage}" />
+            ContentTemplate="{DataTemplate local:TrailsEntryPage}" />
 
         <ShellContent
             Title="Despre"
