--- a/MobileApp/MountainTrailsApp/TrailsEntryPage.xaml
+++ b/MobileApp/MountainTrailsApp/TrailsEntryPage.xaml
@@ -7,6 +7,8 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Adaugă traseu"
                      Clicked="OnAddTrailClicked" />
+        <ToolbarItem Text="Doar favorite"
+                 Clicked="OnToggleFavoritesClicked" />
     </ContentPage.ToolbarItems>
 
     <ListView x:Name="trailsListView"
