--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MuntiRomania</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MuntiRomania.styles.css" asp-append-version="true" />
@@ -13,41 +14,56 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-success border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">MuntiRomania</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target=".navbar-collapse"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+
+                    <!-- LEFT MENU -->
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/Index">Acasa</a>
+                            <a class="nav-link text-white" asp-page="/Index">Acasă</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/Regions/Index">Regiuni</a>
+                            <a class="nav-link text-white" asp-page="/Regions/Index">Regiuni</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/MountainRanges/Index">Mountain Ranges</a>
+                            <a class="nav-link text-white" asp-page="/MountainRanges/Index">Lanțuri muntoase</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/Trails/Index">Trasee</a>
+                            <a class="nav-link text-white" asp-page="/Trails/Index">Trasee</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/PointsOfInterest/Index">Puncte de interes</a>
+                            <a class="nav-link text-white" asp-page="/PointsOfInterest/Index">Puncte de interes</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/TrailPoints/Create">Adauga puncte de interes pe traseu</a>
+                            <a class="nav-link text-white" asp-page="/TrailPoints/Create">
+                                Adaugă POI pe traseu
+                            </a>
                         </li>
-
                     </ul>
+
+                    <!-- RIGHT MENU (LOGIN / REGISTER / LOGOUT) -->
+                    <ul class="navbar-nav">
+                        <partial name="_LoginPartial" />
+                    </ul>
+
                 </div>
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -56,7 +72,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2026 - MuntiRomania - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2026 - MuntiRomania -
+            <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
